--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,12 @@
     android:id="@+id/drawerLayout">
 
     <com.google.android.material.navigation.NavigationView
+        android:layout_gravity="start"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/navigationView"
         app:headerLayout="@layout/header_menu"
-        app:menu="@menu/sidemenu"
-        android:layout_gravity="start"/>
+        app:menu="@menu/sidemenu"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,11 +30,11 @@
 
             <ImageButton
                 android:id="@+id/menu"
-                android:background="?android:attr/selectableItemBackground"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="18dp"
+                android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/menu_icon" />
 
             <ImageView
@@ -58,17 +58,26 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
-            <SearchView
+            <ImageView
                 android:id="@+id/searchView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="18dp"
                 android:layout_marginRight="18dp"
-                android:background="@drawable/search_rounded"
-                android:iconifiedByDefault="false"
-                android:queryBackground="@null"
-                android:queryHint="Find a Medicine" />
+                android:layout_marginLeft="18dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/search_back"/>
+<!--            <SearchView-->
+<!--                android:id="@+id/searchView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_centerInParent="true"-->
+<!--                android:layout_marginLeft="18dp"-->
+<!--                android:layout_marginRight="18dp"-->
+<!--                android:background="@drawable/search_rounded"-->
+<!--                android:clickable="true"-->
+<!--                android:iconifiedByDefault="false"-->
+<!--                android:queryBackground="@null"-->
+<!--                android:queryHint="Find a Medicine"-->
+<!--                app:iconifiedByDefault="false" />-->
         </RelativeLayout>
         <RelativeLayout
             android:layout_weight="1"
@@ -216,6 +225,7 @@
 <!--                android:textColor="@color/black"-->
 <!--                android:layout_marginLeft="12dp"/>-->
             <Button
+                android:id="@+id/blackListFind"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="20dp"
                 android:layout_width="wrap_content"
