--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
                 android:layout_marginRight="35dp"/>
 
             <CheckBox
+                android:id="@+id/remember"
                 android:buttonTint="@color/colorBlack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
