--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -101,6 +101,7 @@
                 android:textColorHint="@color/colorPlaceholder"
                 android:layout_marginTop="24dp"
                 android:drawableStart="@drawable/lock_icon"
+                android:drawableEnd="@drawable/visibility_off"
                 android:drawableTint="@color/black"
                 android:hint="Password"
                 android:textColor="@color/black"
