--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -21,4 +21,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorControlNormal</item>
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
+
+    <style name="Theme.PharmaStore" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="colorPrimary">@color/back_color</item>
+    </style>
+
+    <style name="Theme.medicineDetail" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">@color/white</item>
+        <item name="android:windowContentOverlay">@null</item>
+
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
