--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="back_color">#1F9F84</color>
-    <color name="off_white">#FAFAFA</color>
+    <color name="off_white">#FBFBFB</color>
 
     <color name="colorBlack">#000000</color>
     <color name="colorEditText">#14000000</color>
