--- a/app/src/main/res/layout/medicine.xml
+++ b/app/src/main/res/layout/medicine.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/notfoundimg"
+                android:src="@drawable/notfoundimg2"
                 app:civ_border_color="@color/teal_700"
                 app:civ_border_width="2dp" />
 
